--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-load": "^1.1.16",
     "mongoose": "^7.1.1"
   },
   "devDependencies": {
