--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "author": "Urbano Calderón",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-load": "^1.1.16",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.1"
   },
   "devDependencies": {
